--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Track Corona</h1>  
+        <div class="header">
+            <h1>Track Corona</h1>
+        </div>
         <p id="confirmed" ></p>
         <p id="dead"></p>
         <br>
@@ -21,7 +23,9 @@
                 <tbody id="output"></tbody>    
         </table>
         <h6 id="updated"></h6>
+        <footer>Copyright by Eitan Peles - 2020</footer>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
