--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p id="dead"></p>
         <br>
         <div class="filter-country">
-            <input type="text" id="filter" class="filter" placeholder="Pesquise por país">
+            <input type="text" id="filter" class="filter" placeholder="Search by country...">
         </div>
         <table class="table">
                 <thead id="thead"></thead>
